            - Construction from a SnapPea data file no longer crashes when the
              triangulation in the file has finite vertices (which may be seen
              if the file was created by some tool other than SnapPy).  The
              manifold will however be retriangulated (drilled and filled) upon
              creation since the SnapPea kernel requires an ideal triangulation.
        Class TightEncodable<T>:
            - Now provides a hash() function also, based on the tight encoding.
        Class TopologyLockable, TopologyLock:
            - Split out the old Triangulation::TopologyLock machinery into
              new standalone classes, which are now used with Link as well.
        Class TreeBag:
            - Renamed type() and subtype() to niceType() and niceIndex()
              respectively.  Moreover, niceType() now returns a NiceType, not
              an int.  The old functions are kept but deprecated.
        Enum TreeDecompositionAlg:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., TD_UPPER) have been
              renamed as scoped enum values (e.g., TreeDecompositionAlg::Upper).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class Triangulation<dim>:
            - New routines hasLocks(), lockBoundary(), and unlockAll(), to
              work with locked top-dimensional simplices and their facets.
            - New routine reorderBFS(), which essentially makes the old
              Triangulation<3>::reorderTetrahedraBFS() available in all
              dimensions.
            - New routine randomiseLabelling().
            - New routine hash(), which uses the tight encoding.
            - New routines dot() and writeDot().
            - Renamed dumpConstruction() to source(), and extended it to produce
              either C++ and Python code via an optional language argument.