@@ -52,7 +52,7 @@ namespace regina {
  *
  * \ingroup surfaces
  */
-enum SurfaceFilterType {
+enum class SurfaceFilterType {
     /**
      * A legacy constant representing a do-nothing filter that
      * accepts any normal surface.
@@ -62,18 +62,46 @@ enum SurfaceFilterType {
      * used in practice (in particular, filters of this type could not be
      * created through the GUI).
      */
-    NS_FILTER_LEGACY_DEFAULT = 0,
+    LegacyDefault = 0,
     /**
      * Represents the SurfaceFilterProperties subclass: a filter that
      * examines simple properties of a normal surface.
      */
-    NS_FILTER_PROPERTIES = 1,
+    Properties = 1,
     /**
      * Represents the SurfaceFilterCombination subclass: a filter that
      * combines other filters using boolean AND or OR.
      */
-    NS_FILTER_COMBINATION = 2
+    Combination = 2
 };
+
+/**
+ * A deprecated constant representing one of the different types of
+ * normal surface filter.
+ *
+ * \deprecated This has been renamed to the scoped enumeration constant
+ * SurfaceFilterType::LegacyDefault.
+ */
+[[deprecated]] constexpr SurfaceFilterType NS_FILTER_LEGACY_DEFAULT =
+    SurfaceFilterType::LegacyDefault;
+/**
+ * A deprecated constant representing one of the different types of
+ * normal surface filter.
+ *
+ * \deprecated This has been renamed to the scoped enumeration constant
+ * SurfaceFilterType::Properties.
+ */
+[[deprecated]] constexpr SurfaceFilterType NS_FILTER_PROPERTIES =
+    SurfaceFilterType::Properties;
+/**
+ * A deprecated constant representing one of the different types of
+ * normal surface filter.
+ *
+ * \deprecated This has been renamed to the scoped enumeration constant
+ * SurfaceFilterType::Combination.
+ */
+[[deprecated]] constexpr SurfaceFilterType NS_FILTER_COMBINATION =
+    SurfaceFilterType::Combination;
 
 } // namespace regina
 
