@@ -201,6 +201,12 @@ Version 7.4  [ (to be announced) ]
               if the file was created by some tool other than SnapPy).  The
               manifold will however be retriangulated (drilled and filled) upon
               creation since the SnapPea kernel requires an ideal triangulation.
+        Enum SurfaceFilterType:
+            - This is now a scoped enumeration, for better type safety.  The
+              old enum constants (e.g., NS_FILTER_PROPERTIES) have been renamed
+              as scoped enum values (e.g., SurfaceFilterType::Properties).
+              The old names have been kept as deprecated compile-time constants
+              in the regina:: namespace.
         Class TightEncodable<T>:
             - Now provides a hash() function also, based on the tight encoding.
         Class TopologyLockable, TopologyLock:
